# MultiModal-RAG

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.gpu  README.md  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
scripts/: debug_raw.py  ingest.py  search.py  warmup.py
src/doc_parser/: chunker.py  config.py  logging_config.py  pipeline.py
src/doc_parser/api/: app.py  dependencies.py  schemas.py
src/doc_parser/api/routes/: health.py  ingest.py
src/doc_parser/ingestion/: embedder.py  image_captioner.py  vector_store.py
src/doc_parser/retrieval/: reranker.py
tests/integration/: test_ingest_e2e.py
tests/unit/: test_api_schemas.py  test_embedder.py  test_reranker.py  test_vector_store.py
workflows/: 01-system-overview.md  02-full-rag-pipeline.md  03-ingestion-pipeline.md  04-retrieval-pipeline.md  05-data-structures.md  06-parsing-pipeline.md  07-chunking-architecture.md  08-multimodal-enrichment.md  09-embedding-architecture.md  10-hybrid-search-rrf.md  11-reranking-backends.md  12-api-architecture.md  13-pluggable-backends.md  14-cloud-vs-ollama.md
