[project]
name = "doc-parser"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "glmocr>=0.1.0",
    "pymupdf>=1.27.2",
    "Pillow>=12.1.1",
    "pyyaml>=6.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.8.0",
    "python-dotenv>=1.0.0",
    "rich>=14.0.0",
    "tqdm>=4.67.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "W", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
